# RaspberryPi-WebRTC

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  clang-format-check.yml  docker_build.yml  qemu_build.yml
doc/: BUILD.md  BUILD_WEBRTC.md  USE_GPERFTOOLS.md
example/: virtual_cam.py  yolo_cam.py
src/: CMakeLists.txt  args.h  conductor.cpp  conductor.h  customized_video_encoder_factory.cpp  data_channel_subject.cpp  data_channel_subject.h  main.cpp  parser.cpp  parser.h  rtc_peer.cpp  rtc_peer.h
src/capturer/: libcamera_capturer.cpp  libcamera_capturer.h  pa2_capturer.cpp  pa_capturer.cpp  v4l2_capturer.cpp  v4l2_capturer.h  video_capturer.h
src/common/: thread_safe_queue.h  utils.cpp  utils.h  v4l2_frame_buffer.cpp  v4l2_frame_buffer.h  v4l2_utils.cpp  v4l2_utils.h  worker.cpp  worker.h
src/recorder/: CMakeLists.txt  audio_recorder.cpp  audio_recorder.h  h264_recorder.cpp  h264_recorder.h  raw_h264_recorder.cpp  raw_h264_recorder.h  recorder.h  recorder_manager.cpp  recorder_manager.h  video_recorder.cpp  video_recorder.h
src/signaling/: CMakeLists.txt  http_service.cpp  http_service.h  mqtt_service.cpp  mqtt_service.h  signaling_service.h  websocket_service.cpp  websocket_service.h
src/track/: scale_track_source.cpp  scale_track_source.h  v4l2dma_track_source.cpp  (+1 more)
test/: test_http_server.cpp  test_libcamera.cpp  test_mqtt.cpp  test_openh264.cpp  test_pulseaudio.cpp  test_pulseaudio2.cpp  test_recorder.cpp  test_v4l2_capturer.cpp  test_v4l2_decoder.cpp  test_v4l2_encoder.cpp  test_v4l2_scaler.cpp  test_websocket.cpp
(+25 files in other folders)
